<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormularioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/logo"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/black_ops_one"
            android:text="@string/res_titulo"
            android:textAllCaps="true"
            android:textColor="#429B9B"
            android:textSize="16sp"
            android:typeface="normal"
            app:fontFamily="@font/black_ops_one" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/hintPlaca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/res_placa"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/formPlaca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/hintModelo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/res_modelo"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/formModelo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/hintMarca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/res_marca"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/formMarca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/hintDtFabricacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/res_dtFabricacao"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/formDtFabricacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.button.MaterialButton
                android:id="@+id/btnSalvar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:backgroundTint="#008000"
                android:textColor="#FFF"
                android:text="@string/res_btnSalvar" />

            <android.support.design.button.MaterialButton
                android:id="@+id/btnListar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#0000FF"
                android:textColor="#FFF"
                android:text="@string/res_btnListar"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_toStartOf="@id/btnSalvar"
                android:layout_toLeftOf="@id/btnSalvar"/>

            <android.support.design.button.MaterialButton
                android:id="@+id/btnlimpar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:textColor="#FF0000"
                android:layout_toStartOf="@id/btnListar"
                android:layout_toLeftOf="@id/btnListar"
                android:text="@string/res_btnLimpar" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>